[package]
name = "proxy-server"
description = "proxy-server."
version = "1.0.0"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
repository = "https://github.com/andrewhickman/proxy-server"
documentation = "https://docs.rs/proxy-server"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"
build = "build.rs"

[[bin]]
name = "serve-proxy"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.31"
fn-error-context = "0.1.0"
env_logger = "0.7.1"
log = "0.4.8"
serde = { version = "1.0.111", features = ["derive"] }
serde_yaml = "0.8.13"
structopt = "0.3.14"
rustls = "0.17.0"
tokio = { version = "0.2.21", features = [
    "dns",
    "rt-threaded",
    "macros",
    "tcp",
    "signal"
] }
tokio-rustls = "0.13.1"
hyper = "0.13.6"
futures = "0.3.5"
http = "0.2.1"

[build-dependencies]
vergen = "3.1.0"
