[package]
name = "mock-server"
description = "mock-server."
version = "1.0.0"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
repository = "https://github.com/andrewhickman/mock-server"
documentation = "https://docs.rs/mock-server"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"
build = "build.rs"

[[bin]]
name = "serve-mock"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.31"
fn-error-context = "0.1.0"
env_logger = "0.7.1"
log = "0.4.8"
serde = { version = "1.0.111", features = ["derive"] }
serde_yaml = "0.8.13"
structopt = "0.3.14"
rustls = "0.17.0"
tokio = { version = "0.2.21", features = [
    "fs",
    "dns",
    "rt-threaded",
    "macros",
    "tcp",
    "sync",
    "signal"
] }
tokio-rustls = "0.13.1"
hyper = "0.13.6"
futures = "0.3.5"
http = "0.2.1"
once_cell = "1.4.0"
regex = "1.3.9"
regex-syntax = "0.6.18"
log-panics = { version = "2.0.0", features = ["with-backtrace"] }
headers = "0.3.2"
mime_guess = "2.0.3"
urlencoding = "1.1.1"
hyper-rustls = "0.20.0"
http-serde = "1.0.1"
serde_json = "1.0.55"
json-patch = "0.2.6"
bytes = "0.5.5"
mime = "0.3.16"

[build-dependencies]
vergen = "3.1.0"
